--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 html,
 body,
 :root {
-  height: 100%;
+  height: 100% !important;
 }
 
 @layer base {
@@ -79,4 +79,44 @@ body,
   body {
     @apply bg-background text-foreground;
   }
+}
+
+/* styles/globals.css */
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -250px;
+  width: 250px;
+  height: 100%;
+  z-index: 1000;
+  background-color: white;
+  transition: 0.3s ease-in-out;
+  overflow-y: auto;
+}
+
+.sidebar.open {
+  left: 0;
+}
+
+.toggle-btn {
+  position: fixed;
+  top: 15px;
+  left: 20px;
+  font-size: 1.5rem;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  color: #fff;
+}
+
+.links {
+  padding: 50px 20px;
+}
+
+.links a {
+  display: block;
+  margin-bottom: 20px;
+  color: black;
+  text-decoration: none;
+  font-size: 1.2rem;
 }
